# smart-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/mchs/: knowledge.json
data/sample_documents/: sample_documents.json
scripts/: build_index.py
src/smart_rag/: __main__.py  config.py  logging.py  main.py
src/smart_rag/api/v1/: routes.py
src/smart_rag/clients/: base_llm_client.py  llm_factory.py  mistral_client.py  ollama_client.py  vector_store_client.py
src/smart_rag/core/: dependencies.py  exceptions.py
src/smart_rag/domain/: models.py
src/smart_rag/repositories/: document_repository.py
src/smart_rag/schemas/: requests.py  responses.py
src/smart_rag/services/: llm_service.py  rag_service.py  retrieval_service.py
tests/integration/: test_health.py
tests/unit/: test_rag_service.py
