[tool.poetry]
name = "smart-rag"
version = "0.1.0"
description = "Production-style FastAPI RAG service"
authors = ["Open Source Demo <demo@example.com>"]
readme = "README.md"
packages = [{ include = "smart_rag", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
langchain = "^0.3.27"
langchain-community = "^0.3.27"
langchain-core = "^0.3.75"
langchain-text-splitters = "^0.3.11"
sentence-transformers = "2.6.1"
transformers = "4.39.3"
accelerate = "0.28.0"
chromadb = "^1.0.17"
torch = [
  { version = "==2.1.2", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'" }
]
mistralai = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.3"

[tool.poetry.scripts]
smart-rag = "smart_rag.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
